--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-Pillow==9.5.0
-pdfplumber==0.11.0
-pandas
-vila
+hydra-core==1.3.2
+layoutparser==0.3.4
+numpy==1.25.2
+omegaconf==2.3.0
+pandas==2.0.3
+pdf2image==1.17.0
+pdfplumber==0.10.4
+Pillow==10.0.0
+PyYAML==5.4.1
+torch==2.1.0
+tqdm==4.66.2
+vila==0.5.0
+wandb==0.16.2
